chore: use some newer language features when possible